# Android

./: .gitignore
android_2025_3/: settings.gradle.kts
android_2025_3/app/: build.gradle.kts
android_2025_3/app/src/androidTest/java/com/example/android/: ExampleInstrumentedTest.kt
android_2025_3/app/src/main/: AndroidManifest.xml
android_2025_3/app/src/main/java/yuding/android/: MainActivity.kt
android_2025_3/app/src/main/java/yuding/android/activitylifecycle/: FirstFragment.java  LifeCycleActivity.java  SecondFragment.java
android_2025_3/app/src/main/java/yuding/android/onboard/: OnboardingModel.kt  OnboardingUI.kt  Util.kt
android_2025_3/app/src/main/java/yuding/android/theme/: Color.kt  Theme.kt  Type.kt
android_2025_3/app/src/main/res/drawable/: onboard_1.xml  onboard_2.xml  onboard_3.xml
android_2025_3/app/src/main/res/layout/: activity_life_cycle.xml  content_life_cycle.xml
android_2025_3/app/src/main/res/navigation/: nav_graph.xml
android_2025_3/app/src/main/res/values/: strings.xml  themes.xml
android_2025_3/app/src/main/res/values-night/: themes.xml
android_2025_3/app/src/main/res/values-v23/: themes.xml
android_2025_3/gradle/: libs.versions.toml
android_2025_3/gradle/wrapper/: gradle-wrapper.properties
aosp_native_2025_3/: m2d1d3.te  m2w1d3.rc
aosp_native_2025_3/src/: m2w1d3_helloworld_lib.cpp  m2w1d3_helloworld_main.cpp
cozy_os_2025_4/: CMakeLists.txt  README.md
cozy_os_2025_4/boot/: bootloader.asm  multiboot_header.asm
cozy_os_2025_4/docs/: design.md
cozy_os_2025_4/kernel/core/: interrupts.cpp  kernel.cpp  memory.cpp  process.cpp
cozy_os_2025_4/kernel/drivers/: keyboard.cpp  keyboard.h  screen.cpp  screen.h
cozy_os_2025_4/kernel/include/: interrupts.h  kernel.h  memory.h  process.h
cozy_os_2025_4/linker/: Makefile  linker.ld  linker.ld.bak
cpp_2025_3/: CMakeLists.txt  README.MD
cpp_2025_3/includes/: common_include.hpp  m1_w1_d1_helloworld.hpp
cpp_2025_3/src/: helper.cpp  m1_w1_d1_helloworld.cpp  m1_w1_d2_datatype_variables_operators.cpp  m1w1d4_inlinefunc.cpp  m1w2d3_polymorphism.cpp  m1w2d4_friendfunc.cpp  m1w2d4_operator_overload.cpp  m1w3d1_array.cpp  m1w3d2_dynamic_memory.cpp  m1w3d3_reference_vs_pointer.cpp  m1w3d4_smart_pointers.cpp  m1w4d1_stl.cpp  m2w1d1_template.cpp  m2w1d2_excpt.cpp
cpp_2025_3_vector/: CMakeLists.txt  cpp_construtors.cpp  cpp_pass_copy_vs_reference.cpp  cpp_vector.cpp
cpp_w2m1d3_native_helloworld/: Android.bp  readme
cpp_w2m1d3_native_helloworld/src/: m2w1d3_helloworld_lib.cpp  m2w1d3_helloworld_main.cpp
doc/: doc.md
kotin_2025_4/: build.gradle.kts  settings.gradle.kts
kotin_2025_4/src/test/kotlin/cozylab/kotlin/: ClassFeature.kt  Coroutine.kt  FunctionTest.kt  JsonProcess.kt  NullSafety.kt  Retrofit.kt  sequence.kt
